# my-first-blog

./: Procfile  db.sqlite3  pyproject.toml  requirements.txt
blog/: urls.py  views.py
blog/migrations/: 0001_initial.py
blog/static/css/: blog.css
blog/templates/blog/: base.html  post_detail.html  post_edit.html  post_list.html
mysite/: settings.py  wsgi.py
